--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,11 @@
         android:text="Zaloguj" />
 
     <TextView
-        android:id="@+id/user_id"
+        android:id="@+id/json"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="10dp"
-        android:hint="User Id"
+        android:hint="Json"
         android:padding="8dp" />
 
 </LinearLayout>
